--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,7 @@ img + .brand_name {
   display: inline-block;
   padding: 18.5px 20px 18.5px 20px;
   line-height: 24px;
-  color: #FFF;
+  color: #636363;
   background: #4280c9;
   font-weight: 500;
   font-size: 24px;
