--- a/css/style.css
+++ b/css/style.css
@@ -638,7 +638,7 @@ header {
   background: #333333;
   text-align: center;
 }
-header *:not(.mc-field-group) {
+header *:not(option) {
   color: #FFF;
 }
 
